# balatro-handy-odds-calculator

./: .gitignore  .rust-analyzer.json  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: npm-deploy.yml  rust-tests.yml
src/: card.rs  deck.rs  hand.rs  joker.rs  lib.rs  main.rs  utils.rs
src/hand/: mod.rs  test.rs
