[package]
name = "balatro-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
common_macros = "0.1.1"
rand = "0.8.5"
wasm-bindgen = "0.2.91"
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }

[[bin]]
name = "balatro-calculator"
path = "src/main.rs"


