[package]
name = "balatro-handy-odds-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
common_macros = "0.1.1"
rand = "0.8.5"
wasm-bindgen = "0.2.91"
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
js-sys = "0.3.68"
once_cell = "1.19.0"
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
rayon = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = "1.2.1"


[[bin]]
name = "balatro-calculator"
path = "src/main.rs"


[profile.release]
lto = true
